--- a/frontend/src/app/components/auth/register/register.component.html
+++ b/frontend/src/app/components/auth/register/register.component.html
@@ -14,7 +14,7 @@
     <div class="auth-header">
       <div class="brand">
         <div class="logo">
-          <i class="pi pi-user-plus"></i>
+          <img src="/assets/images/mecanixpro-logo.svg" alt="MecanixPro Logo" class="logo-image" />
         </div>
         <div class="brand-text">
           <h1>Crear Cuenta</h1>
